k8s/clusters/in-cluster/hedgedoc/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    external-dns.alpha.kubernetes.io/target: 65.108.17.229
spec:
  rules:
    - host: hedgedoc.mareo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hedgedoc
                port:
                  name: http
  tls:
    - hosts:
        - hedgedoc.mareo.fr
      secretName: hedgedoc-tls
